<resources>
    <string name="app_name" translatable="false">GCS Collector</string>
    <string name="app_package_name" translatable="false">com.gcs.riyadh.fileprovider</string>
    <string name="loading_location">Loading Location…</string>
    <string name="map_not_loaded">Map Not Loaded</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="connection_error">Connection error, Try again</string>
    <string name="no_internet">No internet connection</string>
    <string name="wrong_username_or_password">Wrong user name or password</string>
    <string name="action_go_offline">Work in offline mode</string>
    <string name="action_go_online">Work in online mode</string>
    <string name="action_edit">Edit</string>
    <string name="out_side_extent">You Out Side extent</string>
    <string name="undo">Undo</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="sync">Sync</string>
    <string name="show_templates">Show templates</string>
    <string name="delete_current_offline_map">Do you want to delete your previously downloaded map?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notes">Notes:</string>



                                                        <!--Ali Ussama Update-->
    <string name="BaseMap" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_AllMap/MapServer</string>

    <string name="BaseMap2" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_Index/MapServer</string>

    <!--<string name="gcs_feature_server" translatable="false">http://41.38.90.172:6080/arcgis/rest/services/GCS_TEST/FeatureServer</string>-->

    <!--<string name="point_feature_layer_services" translatable="false">http://41.38.90.172:6080/arcgis/rest/services/GCS_TEST/FeatureServer/0</string>-->
    <!--<string name="line_feature_layer_services" translatable="false">http://41.38.90.172:6080/arcgis/rest/services/GCS_TEST/FeatureServer/1</string>-->
    <!--<string name="polygon_feature_layer_services" translatable="false">http://41.38.90.172:6080/arcgis/rest/services/GCS_TEST/FeatureServer/2</string>-->
    <!--<string name="index_services" translatable="false">http://41.38.90.172:6080/arcgis/rest/services/GCS_TEST/FeatureServer/3</string>-->


    <string name="gcs_feature_server" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer</string>
    <string name="point_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/0</string>
    <string name="line_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/1</string>
    <string name="polygon_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/2</string>
    <string name="index_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/3</string>
                                                            <!--Ali Ussama Update-->

    <string name="GcsSatellite" translatable="false">http://54.187.60.111/arcgis/rest/services/GCS_Cahced/MapServer</string>

    <string name="MapServiceEnglishToken" translatable="false">dXIpr8oo9tCaCrniBW4dT_sAGlcX8I3tyOK5eNaGJAo.</string>
    <string name="MapServiceArabicToken" translatable="false">dXIpr8oo9tCaCrniBW4dT_sAGlcX8I3tyOK5eNaGJAo.</string>
    <string name="FeatureServiceToken" translatable="false">TMEE6lqp0mvBmoZkPeeLpb0TCLvOd6RIzXVr1oU5_JA.</string>
    <string name="GcsSatelliteToken" translatable="false">RxmJJAGcbuNb_T4lafPuguHIKAfrYVila_DhIkbE9mA.</string>

    <string name="point_feature_layer_name" translatable="false">GeoNames</string>
    <string name="line_feature_layer_name" translatable="false">NameExtendLine</string>
    <string name="polygon_feature_layer_name" translatable="false">NameExtendArea</string>
    <string name="working_area_feature_layer_services" translatable="false"> http://54.187.60.111/arcgis/rest/services/GCS_Collector_26_7_2017/FeatureServer/7</string>

    <string name="dialog_connection_failed_title"> Error downloading</string>
    <string name="connection_failed">Connection Failed, Please try again</string>
    <string name="action_add_new_feature_online">Add New Service</string>
    <string name="tap_on_map_to_add">Tap on Map to add</string>
    <string name="delete_feature">Delete Service</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="gps_not_enabled">GPS Not Enabled</string>
    <string name="enable_gps_now">Enable Now From Settings ?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="accept_permission">You Must accept permission</string>
    <string name="exit">Exit</string>
    <string name="exit_without_saving">Exit without saving ?</string>
    <string name="enter_required_fields_and_save">Enter required fields and Save"</string>
    <string name="try_again"> Try again</string>
    <string name="dialog_bookmark_title">Add New Bookmark</string>
    <string name="dialog_bookmark_add">Add</string>
    <string name="dialog_bookmark_cancel">Cancel</string>
    <string name="no_title">Enter Title</string>
    <string name="bookmark_added">Bookmark Added Successfully</string>
    <string name="bookmark_not_added">Can not add bookmark</string>
    <string name="no_bookmarks">No bookmarks found</string>
    <string name="dialog_show_bookmarks_title">My Bookmarks</string>
    <string name="menu_add_bookmark">Add bookmark</string>
    <string name="menu_show_bookmarks">Show bookmarks</string>
    <string name="title">Title</string>
    <string name="download_another_version">Offline version found, Download another version or load the predownloaded</string>
    <string name="no_offline_version">You do not have Offline Version</string>
    <string name="preview">Load</string>
    <string name="download">Download</string>
    <string name="no_service_found">No service found in this area</string>
    <string name="attachment_offline_error">Cannot add attachment,Please Download Another Local Version</string>
    <string name="sync_completed">Sync Completed</string>
    <string name="error_in_adding_feature">Error in adding service</string>
    <string name="download_map_again">Please, Re-download the map again</string>
    <string name="sync_before_online">If you made any work on offline map you must Sync with Server.\n Sync Now ?</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="camera">Open Camera</string>
    <string name="gallery">Open Gallery</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="delete">Delete</string>
    <string name="change_location">Change Location</string>
    <string name="attachments">Attachments</string>
    <string name="attributes">Attributes</string>
    <string name="search">Search By City</string>
    <string name="draw_area_to_download">Draw Area To Download</string>
    <string name="download_current_map_area">Download Current Map Area</string>
    <string name="load_previous_downloaded_map">Load Previous Downloaded Map</string>
    <string name="logout">Logout</string>
    <string name="delete_attachment">Delete Attachment</string>
    <string name="no_attachment">No Attachments</string>
    <string name="permission_record">Please Accept permission to add record</string>
    <string name="permission_gallery">Please Accept permission to add from gallery</string>
    <string name="delete_service">Delete Service</string>
    <string name="video_size">Video Exceed 30MB</string>
    <string name="change_video_setting">Change video quality from settings</string>
    <string name="name_validation">You must enter a name!</string>
    <string name="zoom_more">Please, Zoom In More</string>
    <string name="clear">Clear</string>
    <string name="draw_on_map">Please, Draw On Map</string>
    <string name="ok">OK</string>
    <string name="gps_setting">Open GPS or Change GPS Mode to High Accuracy</string>
    <string name="no_working_area">No Working Area For You</string>
    <string name="recording_audio">Press and hold to start recording.</string>
    <string name="permission_camera">Please accept permission to open camera</string>
    <string name="map_not_loaded_yet">Map not loaded</string>
    <string name="choose_index_to_work">Choose Index to work on</string>
    <string name="enter_index">Enter Index</string>


    <string name="New_Drawed_Featur_ids">New_Drawed_Featur_ids</string>
    <string name="feature_point_layer">الطبقه النقطية</string>
    <string name="feature_line_layer">الطبقه الخطية</string>
    <string name="feature_area_layer">الطبقه المساحية</string>
    <string name="menu_go_offline_mode">Go offline mode</string>
    <string name="menu_go_online_mode">Go online mode</string>
</resources>
