<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.esri.android.map.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:src="@drawable/farsi_slogn" />

    <LinearLayout
        android:id="@+id/rlLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#bd000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLatLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/esriSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Esri Map"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/sb_esri_satalite_opacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gcsSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@id/esriSeekBar"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="GCS Map"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/sb_gcs_satalite_opacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/baseMapSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@id/gcsSeekBar"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Base Map"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/baseMapOpacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />
        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/compass"
        style="@style/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlLatLong"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_compass" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFullScreen"
        style="@style/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compass"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_fullscreen_white_24dp"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="mini" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabLocation"
        style="@style/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_my_location_white_24dp"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal" />

    <LinearLayout
        android:id="@+id/linearfabMesuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fabLocation"
        android:layout_alignLeft="@id/fabLocation"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:padding="0dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabMesuar"
            style="@style/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ruler"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabSize="normal" />
    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--&gt;-->

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_general"
        style="@style/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearfabMesuar"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:src="@drawable/ic_add_location_white_24dp"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:menu_animationDelayPerItem="55"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_colorPressed="@color/colorPrimaryDark"
        app:menu_colorRipple="#99d4d4d4"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/ic_action_add"
        app:menu_labels_colorNormal="@color/colorPrimary"
        app:menu_labels_colorPressed="@color/colorPrimaryDark"
        app:menu_labels_colorRipple="#66efecec"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_ellipsize="none"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_margin="0dp"
        app:menu_labels_maxLines="-1"
        app:menu_labels_padding="8dp"
        app:menu_labels_position="left"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_showShadow="false"
        app:menu_labels_singleLine="true"
        app:menu_labels_textColor="#fff"
        app:menu_labels_textSize="15sp"
        app:menu_openDirection="up"
        app:menu_showShadow="false">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_polygon"
            style="@style/MenuButtonsStyle"
            android:src="@drawable/ic_action_add_polygon"
            app:fab_label="Add Polygon" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_line"
            style="@style/MenuButtonsStyle"
            android:src="@drawable/ic_action_add_line"
            app:fab_label="Add Line" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_point"
            style="@style/MenuButtonsStyle"
            android:src="@drawable/ic_action_add_point"
            app:fab_label="Add Point" />
    </com.github.clans.fab.FloatingActionMenu>

    <!--</LinearLayout>-->

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linear_layers_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rlLatLong"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_more_layer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="More Info >> "
            android:textColor="#ee3836"
            android:textStyle="bold" />

        <LinearLayout
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:id="@+id/linear_layers_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_point_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/feature_point_layer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_new_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_new_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_edit_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edit_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_gcs_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gcs_feature"
                android:drawablePadding="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#000" />

            <CheckBox
                android:id="@+id/cb_line_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/feature_line_layer"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_new_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_edit_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edit_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_gcs_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gcs_feature"
                android:drawablePadding="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#000" />


            <CheckBox
                android:id="@+id/cb_polygon_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/feature_area_layer"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_new_polygon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_new_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_edit_polygon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edit_feature"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/tv_gcs_polygon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gcs_feature"
                android:drawablePadding="10dp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</RelativeLayout>